@@ -119,6 +119,9 @@ Unreleased -
   - Merge patch by Jory Pratt :
     - patched for lazy binding for quality assurance
 
+  - Merge patch from Ivan Zahariev :
+    -  backfill algo fails if the username is contained anywhere in the file path 
+        
   Patrice Duhamel
   - Add an option --enable-onchange-script-before-and-after to call onchange
     script before and after a change
